--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gasmix</title>
+  <title><%= title %></title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
-
-<%= yield %>
-
+    <div class="container">
+      <%= render 'layouts/header'%>
+      <section class="round">
+        <% flash.each do |key, value| %>
+          <div class="flash <%= key %> "><%= value %></div>
+        <% end %>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+        <%= yield %>
+      </section>
+      <%= render 'layouts/footer'%>
+      <%= debug(params) if Rails.env.development? %>
+    </div>
 </body>
 </html>
