Basic form added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <tr>
     <td class="main">
       <h1 class="car">Gas Mix calculator</h1>
-      <% # render 'shared/car_mix_form' %>
+      <%= render 'shared/car_mix_form' %>
     </td>
   </tr>
   <tr>
