--- a/app/views/shared/_car_mix_form.html.erb
+++ b/app/views/shared/_car_mix_form.html.erb
@@ -1,7 +1,10 @@
-<%= form_for(@car) do |c| %>
-  <%= render 'shared/error_messages', :object => c.object %>
+<%= form_for :car, @car, :url => {:action => "create"} do |c| %>
+  <div><h1><%= label_tag :name %></h1></div>
   <div class="field">
-    <%= c.text %>
+    <%= c.text_field :existing_amount %>
+  </div>
+  <div class="field">
+    <%= c.text_field :existing_octane %>
   </div>
   <div class="actions">
     <%= c.submit "Calculate"%>
