Got algorithm working

--- a/app/views/pages/result.html.erb
+++ b/app/views/pages/result.html.erb
@@ -2,7 +2,11 @@
   <tr>
     <td class="main">
       <h1 class="car">Gas Mix calculator</h1>
-      <%= render 'shared/car_mix_form' %>
+    </td>
+  </tr>
+  <tr>
+    <td class="results">
+      <span class="content"><%= "Fill up #{@amount_to_fill} gallons" %></span>
     </td>
   </tr>
 </table>
