--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About</h1>
+<p>Gas Mix calculator was developed for the sole purpose of helping me at the gas tank when I was filling up.</p>
+<p>Whenever I wanted to perform testing of various octane levels I wanted to ensure that it was as consistent as possible.
+  Coming from a computer science background it seemed logical to measure things as accurately as possible.</p>
+<p>The next step for me was having a calculator in the car, working out what I could by hand and fudging the rest.
+  I just thought there was a better way using a small website.</p>
